err/saemref-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cwclientlib'...
Listing './lib/python3.5/site-packages/cwclientlib/test'...
Listing './lib/python3.5/site-packages/cwclientlib/test/data'...
Listing './lib/python3.5/site-packages/cwclientlib-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/oaipmh'...
Listing './lib/python3.5/site-packages/oaipmh/tests'...
Compiling './lib/python3.5/site-packages/oaipmh/tests/createbrokendata.py'...
***   File "./lib/python3.5/site-packages/oaipmh/tests/createbrokendata.py", line 23
    print "Identify"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oaipmh/tests/createdata.py'...
***   File "./lib/python3.5/site-packages/oaipmh/tests/createdata.py", line 8
    print "GetRecord"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oaipmh/tests/createdata_deleted_records.py'...
***   File "./lib/python3.5/site-packages/oaipmh/tests/createdata_deleted_records.py", line 9
    print "GetRecord"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyoai-2.5.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/saemref_client'...
Listing './lib/python3.5/site-packages/saemref_client-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
